<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.myapplication2.MainActivity">


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentEnd="true" />


    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true"></DatePicker>

    <EditText
        android:id="@+id/edtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        android:layout_below="@+id/datePicker"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        android:layout_below="@+id/edtTelefono"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Descripcion"
        android:layout_below="@+id/edtCorreo"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_siguiente"
        android:textSize="@dimen/texto_botones"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/edtDescripcion"
        android:onClick="irSiguientePantalla"
        />

</RelativeLayout>
